--- a/app/src/main/res/layout/activity_add_expense.xml
+++ b/app/src/main/res/layout/activity_add_expense.xml
@@ -27,6 +27,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="28dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Amount"
         android:inputType="textPersonName"
         android:textColor="#fafafa"
@@ -42,6 +43,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="148dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Description"
         android:inputType="textPersonName"
         android:textColor="#fafafa"
@@ -53,18 +55,37 @@
 
     <EditText
         android:id="@+id/editTextDate"
-        android:layout_width="257dp"
+        android:layout_width="120dp"
         android:layout_height="60dp"
         android:ems="10"
+        android:fontFamily="@font/montserrat"
         android:hint="Select Date"
         android:inputType="date"
         android:textColor="#FAFAFA"
         android:textColorHint="#FAFAFA"
         app:layout_constraintBottom_toTopOf="@+id/groupName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.254"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.772" />
+        app:layout_constraintVertical_bias="0.738" />
+
+    <EditText
+        android:id="@+id/editTextTIme"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
+        android:ems="10"
+        android:fontFamily="@font/montserrat"
+        android:hint="Select Time"
+        android:inputType="date"
+        android:textColor="#FAFAFA"
+        android:textColorHint="#FAFAFA"
+        app:layout_constraintBottom_toTopOf="@+id/groupName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.738"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.738" />
 
     <Button
         android:id="@+id/submitButton"
